package clase2.mesatrabajo2.service;

import clase2.mesatrabajo2.model.Usuario;

public interface ServicioDescarga {
    String descargar(Usuario usuario);
}
